ME_OBJECT_MODELING_V2_MODULE_TAKEHOME